# data_filter_tool

./: CMakeLists.txt  README.md  compare_bbox.py  run.sh  ubuntu.md  v2_detect.py  v3_detect.py
core/: config.py
core/v2/: anchor_apollo.txt  apollo_yolo_2d.py
python/: cpp_use.py  filter_res.py  python.py  util.py
src/: main.cpp
